@@ -2,13 +2,11 @@ package com.hubspot.jinjava.loader;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.io.Files;
 import com.hubspot.jinjava.BaseInterpretingTest;
-import com.hubspot.jinjava.Jinjava;
-import com.hubspot.jinjava.interpret.JinjavaInterpreter;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -16,17 +14,18 @@ public class FileLocatorTest extends BaseInterpretingTest {
 
   FileLocator locatorWorkingDir;
   FileLocator locatorTmpDir;
+  FileLocator locatorConfined;
 
   File first;
   File second;
+  File inside;
+  File secretOutside;
 
   @Before
   public void setUp() throws Exception {
     locatorWorkingDir = new FileLocator();
 
-    File tmpDir = java.nio.file.Files
-      .createTempDirectory(getClass().getSimpleName())
-      .toFile();
+    File tmpDir = Files.createTempDirectory(getClass().getSimpleName()).toFile();
     locatorTmpDir = new FileLocator(tmpDir);
 
     first = new File(tmpDir, "foo/first.jinja");
@@ -35,8 +34,21 @@ public class FileLocatorTest extends BaseInterpretingTest {
     first.getParentFile().mkdirs();
     second.getParentFile().mkdirs();
 
-    Files.write("first", first, StandardCharsets.UTF_8);
-    Files.write("second", second, StandardCharsets.UTF_8);
+    Files.writeString(first.toPath(), "first");
+    Files.writeString(second.toPath(), "second");
+
+    File parent = Files
+      .createTempDirectory(getClass().getSimpleName() + "-confined")
+      .toFile();
+    File confinedDir = new File(parent, "base");
+    confinedDir.mkdirs();
+    locatorConfined = new FileLocator(confinedDir);
+
+    inside = new File(confinedDir, "inside.jinja");
+    Files.writeString(inside.toPath(), "inside");
+
+    secretOutside = new File(parent, "secret.txt");
+    Files.writeString(secretOutside.toPath(), "TOP_SECRET_FROM_OUTSIDE_DIR");
   }
 
   @Test
@@ -101,5 +113,39 @@ public class FileLocatorTest extends BaseInterpretingTest {
   @Test(expected = ResourceNotFoundException.class)
   public void testNotFoundAbs() throws Exception {
     locatorWorkingDir.getString("/blargh", StandardCharsets.UTF_8, interpreter);
+  }
+
+  @Test
+  public void itAllowsInRootRelativePath() throws Exception {
+    assertThat(
+      locatorConfined.getString("inside.jinja", StandardCharsets.UTF_8, interpreter)
+    )
+      .isEqualTo("inside");
+  }
+
+  @Test
+  public void itAllowsInRootAbsolutePath() throws Exception {
+    assertThat(
+      locatorConfined.getString(
+        inside.getAbsolutePath(),
+        StandardCharsets.UTF_8,
+        interpreter
+      )
+    )
+      .isEqualTo("inside");
+  }
+
+  @Test(expected = ResourceNotFoundException.class)
+  public void itBlocksDotDotTraversalOutsideRoot() throws Exception {
+    locatorConfined.getString("../secret.txt", StandardCharsets.UTF_8, interpreter);
+  }
+
+  @Test(expected = ResourceNotFoundException.class)
+  public void itBlocksAbsolutePathOutsideRoot() throws Exception {
+    locatorConfined.getString(
+      secretOutside.getAbsolutePath(),
+      StandardCharsets.UTF_8,
+      interpreter
+    );
   }
 }
